fixed bugs on mobile and corrected sizes

--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -36,7 +36,7 @@
 
 }
 
-@media (max-width: 769px) {
+@media (max-width:769px) {
   .banner {
     height: 100%;
     padding-top: 5rem;
@@ -59,7 +59,10 @@
     img {
       width: clamp(10rem, 10rem + 10vw, 20rem);
       margin-inline: auto;
-      z-index: -1;
+      z-index:-1;
+    }
+    button{
+      font-size: 14px;
     }
 
   }
