--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,17 +1,16 @@
 .footer {
-    
+    display: flex;
+    padding: 1rem;
     background-image: url('../assets/img/bg2.png');
     background-position: center center;
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
-    justify-content:flex-end;
-}
-.footer__row{
-   align-self:end;
+    justify-content: flex-end;
 }
 
-
-
+.footer__row {
+    align-self: end;
+}
 
 .footer img {
     width: 36%;
@@ -24,12 +23,14 @@
     letter-spacing: 0.5px;
     margin-top: 20px;
 }
-@media (max-width:549px) {
+
+@media (max-width:749px) {
     .social-icon {
-     justify-items: end;
-     margin-right: -6rem;
+        justify-items: end;
+        margin-right: -6rem;
     }
+
     .footer {
         padding: 20px 0 10px 0;
     }
-  }
+}
