--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -6,7 +6,7 @@
 }
 
 .project h2 {
-  font-size: 45px;
+  font-size: clamp(.4rem, 1.5rem + 1.5vh, 5rem);
   font-weight: 700;
   text-align: center;
   color: var(--gold);
@@ -110,11 +110,6 @@
   margin-bottom: 24px;
 }
 
-// .proj-imgbx img{
-//   height: 250px;
-//   width: 500px;
-// }
-// @media (max-width:)
 .proj-imgbx::before {
   content: "";
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
@@ -151,7 +146,8 @@
   letter-spacing: 0.8px;
   line-height: 1.1em;
 }
-.proj-txtx h4:hover{
+
+.proj-txtx h4:hover {
   color: var(--gold);
 }
 
@@ -169,4 +165,16 @@
   width: 35%;
   right: -10%;
   z-index: -4;
+}
+
+@media (max-width:549px) {
+  .project {
+    h2 {
+      font-size: 24px;
+    }
+
+    p {
+      font-size: 10px;
+    }
+  }
 }
